dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/main.cpp)
AM_INIT_AUTOMAKE(dice, 2.2.1)
AM_CONFIG_HEADER(config.h)

dnl Test for AIX
AC_AIX

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CPP
AC_SUBST(CPP)
AC_PROG_RANLIB
AM_PROG_LEX
dnl check for specific bison version
AC_CHECK_PROG(YACC, bison-1.35, bison-1.35 -y, bison -y)
AC_PROG_YACC
AC_PROG_LN_S

dnl check for getopt version
AC_CHECK_FUNC(getopt_long_only, AC_DEFINE(HAVE_GETOPT_LONG, 1, needed by non-GNU systems))
AC_CHECK_HEADER(getopt.h, AC_DEFINE(HAVE_GETOPT_H, 1, needed by non-GNU systems))

dnl Doxygen is our documentation making program
AC_CHECK_PROG(DOXYGEN,doxygen,doxygen)
AM_CONDITIONAL(HAS_DOXYGEN, test "x$DOXYGEN" != "x")

dnl Remove generated Makefiles wthen doing maintainer-clean.
MAINTAINERCLEANFILES="$MAINTAINERCLEANFILES Makefile.in"
AC_SUBST(MAINTAINERCLEANFILES)

dnl Always include top level includes.
CPPFLAGS="$CPPFLAGS -I\$(top_srcdir)/src"
AC_SUBST(CPPFLAGS)

dnl Check for L4 directory
AC_ARG_WITH(l4dir,
[  --with-l4dir=DIR        root directory of l4 source tree - used to 
                          install header files into local build-tree
			  [../..]])
AC_MSG_CHECKING(l4 source tree root)
L4DIR="../.."
if test "${with_l4dir}" != "" ; then
  L4DIR="${with_l4dir}"
fi
AC_MSG_RESULT("$L4DIR")
AC_SUBST(L4DIR)

dnl Modified files.
AC_OUTPUT(
Makefile
doc/Makefile
doc/manual/Makefile
doc/html/Makefile
src/Makefile
src/parser/Makefile
src/parser/dce/Makefile
src/parser/corba/Makefile
src/parser/inc/Makefile
src/fe/Makefile
src/be/Makefile
src/be/l4/Makefile
src/be/l4/v2/Makefile
src/be/l4/x0/Makefile
src/be/l4/x0adapt/Makefile
src/be/sock/Makefile
include/Makefile
include/dice/Makefile
)
