## Process this file with automake to produce Makefile.in

diceincludedir=		$(includedir)/dice
diceinclude_HEADERS=	dice.h \
			dice-corba-types.h \
			dice-sockets.h \
			dice-l4-v2.h \
			dice-l4-x0.h \
			dice-l4-v4.h \
			dice-testsuite.h \
			dice-l4-testsuite.h \
			dice-l4-v2x0-testsuite.h \
			dice-l4-v4-testsuite.h

