## Process this file with automake to produce Makefile.in

SUBDIRS=		l4 sock

noinst_LIBRARIES=	libbe.a
libbe_a_SOURCES=	BEAttribute.cpp \
			BEInterfaceFunction.cpp \
			BESrvLoopFunction.cpp \
			BECallFunction.cpp \
			BEMarshaller.cpp \
			BEStructType.cpp \
			BEClass.cpp \
			BEMsgBufferType.cpp \
			BESwitchCase.cpp \
			BEClassFactory.cpp \
			BENameFactory.cpp \
			BETarget.cpp \
			BEClient.cpp \
			BENameSpace.cpp \
			BETestFunction.cpp \
			BEComponent.cpp \
			BEO1Marshaller.cpp \
			BETestMainFunction.cpp \
			BEComponentFunction.cpp \
			BEObject.cpp  \
			BETestServerFunction.cpp \
			BEConstant.cpp \
			BEOpcodeType.cpp \
			BETestsuite.cpp \
			BEContext.cpp \
			BEOperationFunction.cpp \
			BEType.cpp \
			BEDeclarator.cpp \
			BERcvAnyFunction.cpp \
			BETypedDeclarator.cpp \
			BEEnumType.cpp \
			BERcvFunction.cpp \
			BETypedef.cpp \
			BEException.cpp \
			BEReplyAnyWaitAnyFunction.cpp \
			BEUnionCase.cpp \
			BEExpression.cpp \
			BEReplyRcvFunction.cpp \
			BEUnionType.cpp \
			BEFile.cpp \
			BEReplyWaitFunction.cpp \
			BEUnmarshalFunction.cpp \
			BEFunction.cpp \
			BERoot.cpp \
			BEUserDefinedType.cpp \
			BEHeaderFile.cpp \
			BESizes.cpp \
			BEWaitAnyFunction.cpp \
			BEImplementationFile.cpp \
			BESndFunction.cpp \
			BEWaitFunction.cpp
			
noinst_HEADERS=		BEAttribute.h \
			BEInterfaceFunction.h \
			BESrvLoopFunction.h \
			BECallFunction.h \
			BEMarshaller.h \
			BEStructType.h \
			BEClass.h \
			BEMsgBufferType.h \
			BESwitchCase.h \
			BEClassFactory.h \
			BENameFactory.h \
			BETarget.h \
			BEClient.h \
			BENameSpace.h \
			BETestFunction.h \
			BEComponent.h \
			BEO1Marshaller.h \
			BETestMainFunction.h \
			BEComponentFunction.h \
			BEObject.h  \
			BETestServerFunction.h \
			BEConstant.h \
			BEOpcodeType.h \
			BETestsuite.h \
			BEContext.h \
			BEOperationFunction.h \
			BEType.h \
			BEDeclarator.h \
			BERcvAnyFunction.h \
			BETypedDeclarator.h \
			BEEnumType.h \
			BERcvFunction.h \
			BETypedef.h \
			BEException.h \
			BEReplyAnyWaitAnyFunction.h \
			BEUnionCase.h \
			BEExpression.h \
			BEReplyRcvFunction.h \
			BEUnionType.h \
			BEFile.h \
			BEReplyWaitFunction.h \
			BEUnmarshalFunction.h \
			BEFunction.h \
			BERoot.h \
			BEUserDefinedType.h \
			BEHeaderFile.h \
			BESizes.h \
			BEWaitAnyFunction.h \
			BEImplementationFile.h \
			BESndFunction.h \
			BEWaitFunction.h
			
