## Process this file with automake to produce Makefile.in

SUBDIRS= l4 sock cdr

noinst_LIBRARIES= libbe.a
libbe_a_SOURCES = BEAttribute.cpp BEInterfaceFunction.cpp BESrvLoopFunction.cpp BECallFunction.cpp BEMarshaller.cpp BEStructType.cpp BEClass.cpp BESwitchCase.cpp BEClassFactory.cpp BENameFactory.cpp BETarget.cpp BEClient.cpp BENameSpace.cpp BEComponent.cpp BEComponentFunction.cpp BEObject.cpp BEConstant.cpp BEOpcodeType.cpp BEContext.cpp BEOperationFunction.cpp BEType.cpp BEDeclarator.cpp BETypedDeclarator.cpp BEEnumType.cpp BETypedef.cpp BEException.cpp BEUnionCase.cpp BEExpression.cpp BEUnionType.cpp BEIDLUnionType.cpp BEFile.cpp BEUnmarshalFunction.cpp BEFunction.cpp BERoot.cpp BEUserDefinedType.cpp BEHeaderFile.cpp BESizes.cpp BEWaitAnyFunction.cpp BEImplementationFile.cpp BESndFunction.cpp BEWaitFunction.cpp BEReplyFunction.cpp BECommunication.cpp BEMarshalFunction.cpp BEDispatchFunction.cpp BEReplyCodeType.cpp BEMsgBuffer.cpp BEMsgBufferType.cpp BECreateException.cpp BETrace.cpp

noinst_HEADERS = BEAttribute.h BEInterfaceFunction.h BESrvLoopFunction.h BECallFunction.h BEMarshaller.h BEStructType.h BEClass.h BESwitchCase.h BEClassFactory.h BENameFactory.h BETarget.h BEClient.h BENameSpace.h BEComponent.h BEComponentFunction.h BEObject.h BEConstant.h BEOpcodeType.h BEContext.h BEOperationFunction.h BEType.h BEDeclarator.h BETypedDeclarator.h BEEnumType.h BETypedef.h BEException.h BEUnionCase.h BEExpression.h BEUnionType.h BEIDLUnionType.h BEFile.h BEUnmarshalFunction.h BEFunction.h BERoot.h BEUserDefinedType.h BEHeaderFile.h BESizes.h BEWaitAnyFunction.h BEImplementationFile.h BESndFunction.h BEReplyFunction.h BEWaitFunction.h BECommunication.h BEMarshalFunction.h BEDispatchFunction.h BEReplyCodeType.h BEMsgBuffer.h BEMsgBufferType.h BEMarshaller.h BECreateException.h BETrace.h

AM_CXXFLAGS = -Wunused -Wunused-parameter -Wall -W \
	      -Wcast-align -Wcast-qual -Wconversion -Wformat=2 \
	      -Wmissing-format-attribute -Wpointer-arith -Wshadow -Wwrite-strings
