## Process this file with automake to produce Makefile.in

noinst_LIBRARIES=	libfe.a
libfe_a_SOURCES = FEArrayDeclarator.cpp \
            FEFileComponent.cpp \
			FEStructType.cpp \
			FEArrayType.cpp \
			FEFunctionDeclarator.cpp \
			FETaggedEnumType.cpp \
			FEAttribute.cpp \
			FEIdentifier.cpp \
			FETaggedStructType.cpp \
			FEBase.cpp \
			FEIntAttribute.cpp \
			FETaggedUnionType.cpp \
			FEBinaryExpression.cpp \
			FEInterface.cpp \
			FETypeAttribute.cpp \
			FEConditionalExpression.cpp \
			FEInterfaceComponent.cpp \
			FETypeSpec.cpp \
			FEConstDeclarator.cpp \
			FEIsAttribute.cpp \
			FETypedDeclarator.cpp \
			FEConstructedType.cpp \
			FELibrary.cpp \
			FEUnaryExpression.cpp \
			FEDeclarator.cpp \
			FEUnionCase.cpp \
			FEEndPointAttribute.cpp \
			FEOperation.cpp \
			FEUnionType.cpp \
			FEEnumDeclarator.cpp \
			FEPipeType.cpp \
			FEUserDefinedExpression.cpp \
			FEEnumType.cpp \
			FEPrimaryExpression.cpp \
			FEUserDefinedType.cpp \
			FEExceptionAttribute.cpp \
			FEPtrDefaultAttribute.cpp \
			FEVersionAttribute.cpp \
			FEExpression.cpp \
			FESimpleType.cpp \
			FEFile.cpp \
			FEStringAttribute.cpp \
			FESizeOfExpression.cpp

noinst_HEADERS=		FEArrayDeclarator.h \
			FEFileComponent.h \
			FEStructType.h \
			FEArrayType.h \
			FEFunctionDeclarator.h \
			FETaggedEnumType.h \
			FEAttribute.h \
			FEIdentifier.h \
			FETaggedStructType.h \
			FEBase.h \
			FEIntAttribute.h \
			FETaggedUnionType.h \
			FEBinaryExpression.h \
			FEInterface.h \
			FETypeAttribute.h \
			FEConditionalExpression.h \
			FEInterfaceComponent.h \
			FETypeSpec.h \
			FEConstDeclarator.h \
			FEIsAttribute.h \
			FETypedDeclarator.h \
			FEConstructedType.h \
			FELibrary.h \
			FEUnaryExpression.h \
			FEDeclarator.h \
			FEUnionCase.h \
			FEEndPointAttribute.h \
			FEOperation.h \
			FEUnionType.h \
			FEEnumDeclarator.h \
			FEPipeType.h \
			FEUserDefinedExpression.h \
			FEEnumType.h \
			FEPrimaryExpression.h \
			FEUserDefinedType.h \
			FEExceptionAttribute.h \
			FEPtrDefaultAttribute.h \
			FEVersionAttribute.h \
			FEExpression.h \
			FESimpleType.h \
			FEFile.h \
			FEStringAttribute.h \
			FESizeOfExpression.h

